# pyxmolpp2

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  ContainerSelection.h  Doxyfile  Doxyfile-mcss  LICENSE  Logger.cpp  Logger.h  MANIFEST.in  Observer.h  README.md  README.rst  TODO  VERSION  WriteVersionInfo.cmake  build_and_push_gh_pages.sh  build_docs.sh  classes.html  index.html  main.cpp  modules.html  pages.html  read_trajectory.py  read_trajectory_old.py  run_all_tests.sh  run_gcovr.sh  setup.py  write_type_hints.py  write_version_info.py
.github/workflows/: ci.yml
_pyxmolpp2/: TorsionAngle.cpp  pyxmolpp2.cpp
_pyxmolpp2/geom/: UnitCell.cpp
_pyxmolpp2/io/: AmberNetCDF.h
_pyxmolpp2/proxy/: references.cpp  selections.cpp  spans.cpp  spans.h  to_pdb_shortcuts.h
api/c++/: AmberNetCDF_8h.html  AngleValue_8h.html  AtomSmartSelection_8h.html  AtomSmartSpan_8h.html  CoordSmartSelection_8h.html  CoordSmartSpan_8h.html  FrameObserverImpl_8h.html  FrameObserver_8h.html  Frame_8h.html  GromacsXtcFile_8h.html  MoleculeSmartSelection_8h.html  MoleculeSmartSpan_8h.html  Observable_8h.html  PdbInputFile_8h.html  PdbLine_8h.html  PdbReader_8h.html  PdbRecord_8h.html  PdbRecord__fwd_8h.html  PdbWriter_8h.html  ProteinTorsionAngleFactory_8h.html  ProxySpan_8h.html  ResidueId_8h.html  ResidueSmartSelection_8h.html  ResidueSmartSpan_8h.html  SelectionImpl_8h.html  Selection_8h.html  ShortAsciiString_8h.html  SpatialIndex_8h.html  TorsionAngle_8h.html  TrajectoryFile_8h.html  Trajectory_8h.html  Transformation3d_8h.html  TrjtoolDatFile_8h.html  UnitCell_8h.html  XYZ_8h.html  XdrHandle_8h.html  XtcReader_8h.html  XtcWriter_8h.html  alignment-impl_8h.html  alignment_8h.html  (+165 more)
api/python/: changelog.html  classes.html  index.html  install.html  m-dark+documentation.compiled.css  modules.html  overview.html  pages.html  pyxmolpp2.AmberNetCDF.html  pyxmolpp2.AngleValue.html  pyxmolpp2.Atom.html  pyxmolpp2.AtomPredicate.html  pyxmolpp2.AtomSelection.html  pyxmolpp2.AtomSpan.html  pyxmolpp2.CoordSelection.html  pyxmolpp2.CoordSelectionSizeMismatchError.html  pyxmolpp2.CoordSpan.html  pyxmolpp2.DeadFrameAccessError.html  pyxmolpp2.DeadObserverAccessError.html  pyxmolpp2.Frame.html  pyxmolpp2.GeomError.html  pyxmolpp2.GromacsXtcFile.html  pyxmolpp2.Molecule.html  pyxmolpp2.MoleculePredicate.html  pyxmolpp2.MoleculeSelection.html  pyxmolpp2.MoleculeSpan.html  pyxmolpp2.MultipleFramesSelectionError.html  pyxmolpp2.PdbFile.html  pyxmolpp2.Residue.html  pyxmolpp2.ResidueId.html  pyxmolpp2.ResiduePredicate.html  pyxmolpp2.ResidueSelection.html  pyxmolpp2.ResidueSpan.html  pyxmolpp2.Rotation.html  pyxmolpp2.SpanSplitError.html  pyxmolpp2.TorsionAngle.html  pyxmolpp2.TorsionAngleFactory.html  pyxmolpp2.Trajectory.Iterator.html  pyxmolpp2.Trajectory.Slice.html  pyxmolpp2.Trajectory.html  (+25 more)
bindings/: CMakeLists.txt
bindings/src/: TorsionAngle.cpp  TorsionAngle.h  iterator-helpers.h
cmake/: FindNetCDF.cmake  WriteVersionInfo.cmake
docs/: .gitignore  Makefile  build.sh  publish.sh  requirements.txt
docs/site/: conf.py  index.rst
docs/source/: changelog.rst  conf.py  index.rst  install.rst
include/xmol/: BaseException.h  Frame.h  ProteinTorsionAngleFactory.h  TorsionAngle.h  base.h  fwd.h
pydocs/source/: conf.py  index.rst
pytests/xmol/: test_import.py  test_imports.py  test_no_cpp_signatures.py
pyxmolpp/: TorsionAngle.cpp  base.cpp  base.h  init.cpp  init.h  pyxmolpp.cpp  pyxmolpp.h
pyxmolpp/algo/: algo.cpp
pyxmolpp/amber/: NetCDFTrajectoryFile.cpp  init.cpp  init.h
pyxmolpp/crystal/: BestShiftFinder.cpp  LatticeVectors.cpp  (+2 more)
pyxmolpp2/: CMakeLists.txt  __init__.py
tests/: CMakeLists.txt
tests/amber/: NetCDFTrajectoryFile.cpp
tests/benchmarks/: CMakeLists.txt
tests/benchmarks/v0/: common.cpp  common.h  create-frame.cpp  iterate-proxy-smart-selection.cpp  iterate-proxy.h  iterate-trajectory.cpp  iterate-trajectory.h
tests/benchmarks/v1/: common.cpp  common.h  create-frame.cpp  iterate-proxy-selection.cpp  iterate-proxy-smart-selection.cpp  iterate-proxy-span.cpp  iterate-proxy.cpp  iterate-proxy.h  iterate-trajectory.h  smart-iterators.cpp
tests/bindings/: make_polygly.py  test_imports.py  test_no_cpp_signatures.py
tests/bindings/algo/: test_alignment.py  test_autocorrelation.py  test_sasa.py  test_sasa_vs_analytical.py
tests/bindings/crystal/: test_lattice_vectors.py
tests/bindings/geometry/: test_AngleValue.py  test_Transformation3d.py  test_XYZ.py  test_alignment.py  test_basic.py  test_lattice_vectors.py
tests/bindings/io/: test_AmberNetCDF.py  test_GromacsXtc.py  test_PdbFile.py  test_TrjtoolDatFile.py  test_read_traj.py
tests/bindings/pipe/: test_pipes.py
tests/bindings/polymer/: test_Atom.py  test_Names.py  test_indices.py  test_predicates.py  test_selections.py  test_shortcuts.py  test_torsions.py
tests/bindings/trajectory/: test_pipes.py  test_python_input_file.py  test_trajectory.py
tests/crystal/: LatticeVectors.cpp
tests/geometry/: Transformation3d.cpp  alignment.cpp  calculate_sasa.cpp
tests/pdb/: PDBReader.cpp  PdbFile.cpp  PdbReader.cpp  PdbWriter.cpp
tests/polymer/: Atom.cpp  TorsionAngle.cpp  predicate_generators.cpp
tests/selection/: container_selecition.cpp
tests/trajtool/: DATReader.cpp
tests/trjtool/: DATReader.cpp  DatFile.cpp  DatTrajectoryPortion.cpp
tests/v1/: Atom.cpp  Frame.cpp  Geom.cpp  Pdb.cpp  Performance.cpp  Proxy.cpp  Selection.cpp  Spans.cpp  TorsionAngle.cpp  TrjtoolDatFile.cpp  predicate_generators.cpp  test_common.cpp  test_common.h
tests/v1/algo/: calculate_sasa.cpp
tests/v1/geom/: Transformation3d.cpp
tests/v1/io/: GromacsXtcTrajectory.cpp  NetCDFTrajectoryFile.cpp
tests/v1/io/pdb/: PdbFile.cpp  PdbReader.cpp  PdbWriter.cpp
tests/v1/io/xdr/: XtcReader.cpp  XtcWriter.cpp
tools/: build_docs.sh  disable-cpu-frequency-scaling.sh  enable-cpu-frequency-scaling.sh  external-0-add-upstream-repos.sh  external-1-update.sh  make-sdist.sh  print_version_number.py  run-benchmark.py  run_all_tests.sh  run_coverage.sh  run_gcovr.sh  update_submodules.sh
(+500 files in other folders)
